--- a/Contracts/package.json
+++ b/Contracts/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:local": "./node_modules/.bin/hardhat node",
+    "deploy:local": "./node_modules/.bin/hardhat run --network localhost scripts/deploy.ts",
+    "deploy:docker": "./node_modules/.bin/hardhat run --network docker scripts/deploy.ts",
+    "test:local": "./node_modules/.bin/hardhat test"
   },
   "keywords": [],
   "author": "",
