backend docker setup fixes

--- a/Backend/env.example
+++ b/Backend/env.example
@@ -1,6 +1,9 @@
+NODE_ENV=
+PORT=
 ACCOUNT_PRIVATE_KEY=
 ACCOUNT_ADDRESS=
 NODE_RPC=
+NODE_RPC_DOCKER=
 NODE_RPC_MATIC_MUMBAI=
 NFT_CONTRACT_ADDRESS_LOCAL=
 NFT_CONTRACT_ADDRESS_MATIC_MUMBAI=
